--- a/Little-lies/src/components/Roles/Roles.scss
+++ b/Little-lies/src/components/Roles/Roles.scss
@@ -1,6 +1,7 @@
 .roles-list-box {
-  margin-bottom: 6px;
+  margin-bottom: 0;
   padding: 8px 10px;
+  flex: 1;
   background: rgba(0, 0, 0, 0.8);
   backdrop-filter: blur(3px);
   border-radius: 8px;
